kubernetes/apps/infrastructure/dragonfly/app/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: dragonfly-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: dragonfly-operator
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "9999"
              protocol: ANY
